Bug 52772 - [4.8 Regression] internal compiler error: Segmentation fault
Summary: [4.8 Regression] internal compiler error: Segmentation fault
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.8.0
: P3 normal
Target Milestone: 4.8.0
Assignee: Richard Biener
URL:
Keywords:
: 52780 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-29 14:19 UTC by Mario Baumann
Modified: 2012-03-30 13:41 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2012-03-29 00:00:00


Attachments
c++ source (603 bytes, text/x-c++src)
2012-03-29 14:19 UTC, Mario Baumann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mario Baumann 2012-03-29 14:19:11 UTC
Created attachment 27034 [details]
c++ source

Hi all,

compilation of attached c++ source file fails with

> g++ -m32 -O2 -c goo.cxx
goo.cxx: In member function 'int c8::tria(c7*, c5*)':
goo.cxx:81:1: internal compiler error: Segmentation fault
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.

-----------------------------------------------------------------------------
> uname -a
Linux ahsoka.intec.dom 2.6.32-220.7.1.el6.x86_64 #1 SMP Fri Feb 10 15:22:22 EST 2012 x86_64 x86_64 x86_64 GNU/Linux

> rpm -qa "glibc*" | grep -e 'glibc-[0-9]' | sort -u
glibc-2.12-1.47.el6_2.9.i686
glibc-2.12-1.47.el6_2.9.x86_64

> g++ -v
Using built-in specs.
COLLECT_GCC=g++
COLLECT_LTO_WRAPPER=/app2/gcc/4.8.0-20120329-svn185950/i686/libexec/gcc/i686-unknown-linux-gnu/4.8.0/lto-wrapper
Target: i686-unknown-linux-gnu
Configured with: ./configure --prefix=/app2/gcc/4.8.0-20120329-svn185950/i686 --enable-languages=c,c++,fortran --disable-nls --with-gmp=/app2/gcc/4.8.0-20120329-svn185950/i686/aux --with-mpfr=/app2/gcc/4.8.0-20120329-svn185950/i686/aux --with-mpc=/app2/gcc/4.8.0-20120329-svn185950/i686/aux --with-ppl=/app2/gcc/4.8.0-20120329-svn185950/i686/aux --with-cloog=/app2/gcc/4.8.0-20120329-svn185950/i686/aux --disable-multilib --build=i686-unknown-linux-gnu
Thread model: posix
gcc version 4.8.0 20120329 (experimental) (GCC) 

> ld -v
GNU ld (GNU Binutils) 2.22.52.20120329
Comment 1 Jakub Jelinek 2012-03-29 15:13:05 UTC
Richard, this is yours (or at least
http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=185913
makes it no longer latent if it was latent before).
Comment 2 Richard Biener 2012-03-30 09:04:47 UTC
Mine.
Comment 3 Richard Biener 2012-03-30 09:44:40 UTC
*** Bug 52780 has been marked as a duplicate of this bug. ***
Comment 4 Richard Biener 2012-03-30 13:40:31 UTC
Author: rguenth
Date: Fri Mar 30 13:40:17 2012
New Revision: 186011

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=186011
Log:
2012-03-30  Richard Guenther <rguenther@suse.de>

	PR middle-end/52772
	* except.c (emit_to_new_bb_before): Move loop updating ...
	(dw2_build_landing_pads): ... here.  Use a proper block for
	querying the loop father.

	* g++.dg/torture/pr52772.C: New testcase.

Added:
    trunk/gcc/testsuite/g++.dg/torture/pr52772.C
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/except.c
    trunk/gcc/testsuite/ChangeLog
Comment 5 Richard Biener 2012-03-30 13:41:41 UTC
Fixed.