re PR c++/52772 (internal compiler error: Segmentation fault)

2012-03-30  Richard Guenther <rguenther@suse.de>

	PR middle-end/52772
	* except.c (emit_to_new_bb_before): Move loop updating ...
	(dw2_build_landing_pads): ... here.  Use a proper block for
	querying the loop father.

	* g++.dg/torture/pr52772.C: New testcase.

From-SVN: r186011